# thegang-ksqldb-demo

./: .gitignore  README.md  ksql.sh  pyproject.toml  run-ksql.sh
data_generator/: 01_add_kessoku_band.py  01_add_kessoku_band.sql  02_add_mygo_first_live_then_change_anon.py  02_add_mygo_first_live_then_change_anon.sql  03_change_anon_instrument.sql  04_add_next_concert_and_reactions.sql  04_add_third_concert_and_reactions.sql  05_add_social_reactions.sql  consts.py
docker/: KafkaConnect.Dockerfile  add-all-debezium.sh  connector.json  docker-compose.yaml  init.sql  sink-utils.sh  src-utils.sh  utils.sh
docker/connectors/: flat-connector.json  flat-source-connector.json  full-connector.json  full-source-connector.json  sink-connector.json  sink-jdbc-avro.json  sink-jdbc-flat.json  sink-jdbc-schema.json  sink-jdbc.json  sink-kafka-replicator.json  source-flat-avro-debezium.json  source-flat-debezium.json  source-flat-schema-debezium.json  source-full-debezium.json
ksql/: 01_input.ksql  01_xtra_inputs.ksql  02_tables_and_aggs.ksql  02_tables_joined.ksql  03_stream_table_joined.ksql  04_inputs_and_repartitioning.ksql  04_streams_joined.ksql  05_combining_streams.ksql
