[tool.poetry]
name = "ksqldb-demo-datagen"
version = "0.1.0"
description = ""
authors = ["Nawat Ngerncham <168704945+nawatatthegang@users.noreply.github.com>"]
readme = "README.md"
packages = [{ "include" = "data_generator" }]

[tool.poetry.dependencies]
python = "3.10.*"
sqlalchemy = "^2.0.35"
psycopg-binary = "^3.2.2"
psycopg = "^3.2.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
